jilles      2005/11/08 01:19:42 UTC	(20051108-3657)
  Log:
  Revert this change that allows ircops/sras to
  cause stack overflows and is otherwise suspect
  for now.
  

  Changes:	Modified:
  +1 -7		trunk/src/function.c (File Modified) 


jilles      2005/11/08 00:54:23 UTC	(20051108-3655)
  Log:
  nickname -> account
  

  Changes:	Modified:
  +2 -2		trunk/modules/userserv/drop.c (File Modified) 
  +1 -1		trunk/modules/userserv/freeze.c (File Modified) 
  +8 -8		trunk/modules/userserv/resetpass.c (File Modified) 
  +4 -4		trunk/modules/userserv/return.c (File Modified) 
  +1 -1		trunk/modules/userserv/vhost.c (File Modified) 


jilles      2005/11/08 00:49:36 UTC	(20051108-3653)
  Log:
  Port command logging from nickserv to userserv.
  

  Changes:	Modified:
  +6 -0		trunk/modules/userserv/freeze.c (File Modified) 
  +6 -0		trunk/modules/userserv/hold.c (File Modified) 
  +2 -0		trunk/modules/userserv/info.c (File Modified) 
  +5 -0		trunk/modules/userserv/list.c (File Modified) 
  +20 -5	trunk/modules/userserv/listchans.c (File Modified) 
  +5 -0		trunk/modules/userserv/listmail.c (File Modified) 
  +5 -0		trunk/modules/userserv/login.c (File Modified) 
  +7 -0		trunk/modules/userserv/logout.c (File Modified) 
  +6 -0		trunk/modules/userserv/mark.c (File Modified) 
  +4 -2		trunk/modules/userserv/resetpass.c (File Modified) 
  +2 -0		trunk/modules/userserv/return.c (File Modified) 
  +4 -0		trunk/modules/userserv/sendpass.c (File Modified) 
  +15 -0	trunk/modules/userserv/set.c (File Modified) 
  +4 -0		trunk/modules/userserv/status.c (File Modified) 
  +2 -1		trunk/modules/userserv/taxonomy.c (File Modified) 
  +4 -0		trunk/modules/userserv/verify.c (File Modified) 
  +8 -1		trunk/modules/userserv/vhost.c (File Modified) 


terminal    2005/11/08 00:16:57 UTC	(20051108-3651)
  Log:
  only wallops on drop if user is SRA but is NOT a founder
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/drop.c (File Modified) 

